# apr

./: .cvsignore  .editorconfig  .gitignore  .travis.yml  APRDesign  APRVARS.in  CHANGES  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile.in  Makefile.win  NOTICE  NWGNUmakefile  README  README.FREETDS  README.cmake  README.dev  SConscript  SConstruct  STATUS  acconfig.h  aclocal.m4  apr-config.in  apr.dep  apr.dsp  apr.dsw  apr.mak  apr.pc.in  apr_common.m4  aprlib.def  aprlib.dsp  aprlib.mak  aprlibdll.dsp  build.conf  buildconf  config.guess  config.layout  config.sub  configure  (+10 more)
.github/workflows/: cmake.yml  linux.yml  macos.yml  windows.yml
atomic/netware/: apr_atomic.c
atomic/os390/: Makefile.in  atomic.c
atomic/solaris_sparc/: .cvsignore  Makefile.in  apr_atomic_sparc.s  apr_atomic_sparc_no_support.c
atomic/unix/: Makefile.in  apr_atomic.c  builtins.c  builtins64.c  ia32.c  mutex.c  mutex64.c  ppc.c  s390.c  solaris.c
atomic/win32/: apr_atomic.c  apr_atomic64.c
bcc/: apr.cbproj  apr.h  apr_group.groupproj  aprapp.cbproj  libapr.cbproj
buckets/: Makefile.in  NWGNUmakefile  README.txt  ap_buf.c  ap_eos_buf.c  ap_filter.h  ap_mmap_buf.c  ap_rmem_buf.c  ap_rwmem_buf.c  apr_brigade.c  apr_buckets.c  apr_buckets_alloc.c  apr_buckets_eos.c  apr_buckets_file.c  apr_buckets_flush.c  apr_buckets_heap.c  apr_buckets_mmap.c  apr_buckets_pipe.c  apr_buckets_pool.c  apr_buckets_refcount.c  apr_buckets_simple.c  apr_buckets_socket.c  apr_buf.h  doc_SFmtg.txt  doc_bucket_brigades.txt  doc_dean_iol.txt  doc_greg_filters.txt  doc_page_io.txt  doc_stacked_io.txt  doc_wishes.txt  filters.c  greg_patch.txt  register_patch.txt  ryan.patch  util_filter.c  util_filter.h
crypto/: apr_crypto.c  apr_crypto_commoncrypto.c  apr_crypto_internal.c  apr_crypto_nss.c  apr_crypto_openssl.c  apr_crypto_prng.c  apr_md4.c  apr_md5.c  apr_passwd.c  apr_sha1.c  apr_siphash.c  crypt_blowfish.c  crypt_blowfish.h  getuuid.c  uuid.c
dbd/: NWGNUdbdfreetds  NWGNUdbdmysql  NWGNUdbdpgsql  NWGNUdbdsqli2  NWGNUdbdsqli3  NWGNUmakefile  apr_dbd.c  apr_dbd_freetds.c  apr_dbd_freetds.dsp  apr_dbd_mysql.c  apr_dbd_mysql.dsp  apr_dbd_odbc.c  apr_dbd_odbc.dsp  apr_dbd_oracle.c  apr_dbd_oracle.dsp  apr_dbd_pgsql.c  apr_dbd_pgsql.dsp  apr_dbd_sqlite2.c  apr_dbd_sqlite2.dsp  apr_dbd_sqlite3.c  apr_dbd_sqlite3.dsp
dbd/unsupported/: NWGNUdbdfreetds  apr_dbd_freetds.c
dbm/: NWGNUdbmdb  NWGNUdbmgdbm  NWGNUmakefile  apr_dbm.c  apr_dbm_berkeleydb.c  apr_dbm_db.dsp  apr_dbm_gdbm.c  apr_dbm_gdbm.dsp  apr_dbm_lmdb.c  apr_dbm_ndbm.c  apr_dbm_sdbm.c
dbm/sdbm/: sdbm.c  sdbm_hash.c  sdbm_lock.c  sdbm_pair.c
docs/: .cvsignore  APRDesign.html  canonical_filenames.html  doxygen.conf  incomplete_types  non_apr_programs  win32_builds.html
dso/aix/: Makefile.in  dso.c  dso.h
dso/beos/: Makefile.in  dso.c  dso.h
dso/netware/: dso.c
dso/os2/: Makefile.in  dso.c  dso.h
dso/os390/: Makefile.in  dso.c  dso.h
dso/unix/: Makefile.in  dso.c  dso.h
dso/win32/: dso.c  dso.h
encoding/: apr_base64.c  apr_encode.c  apr_escape.c
file_io/beos/: Makefile.in  dir.c  file_io_common.c  fileacc.c  filedup.c  fileio.h  filestat.c  open.c  pipe.c  readwrite.c  seek.c
file_io/netware/: filestat.c  filesys.c  flock.c  mktemp.c  pipe.c
file_io/os2/: Makefile.in  buffer.c  dir.c  dir_make_recurse.c  (+14 more)
helpers/: apr-conf.m4  apr_rename.pl  config.guess  config.sub  default.pl  make_export.awk  make_export.pl  mkdep.sh  rules.mk.in  scandoc
hooks/: apr_hooks.c
inc/: .cvsignore  apr_fnmatch.h  apr_macro.h  apr_pools.h
include/: .cvsignore  apr.h.in  apr.hnw  apr.hw  apr.hwc  apr_allocator.h  apr_atomic.h  apr_base64.h  apr_buckets.h  apr_buf.h  apr_compat.h  apr_config.h.in  apr_config.hw  apr_crypto.h  apr_cstr.h  apr_date.h  apr_dbd.h  apr_dbm.h  apr_dso.h  apr_encode.h  apr_env.h  apr_errno.h  apr_escape.h  apr_eventset.h  apr_file_info.h  apr_file_io.h  apr_fnmatch.h  apr_general.h  apr_getopt.h  apr_global_mutex.h  apr_hash.h  apr_hooks.h  apr_iconv.h  apr_inherit.h  apr_jose.h  apr_json.h  apr_ldap.h.in  apr_ldap.hnw  apr_ldap.hw  apr_ldap_init.h  (+68 more)
jose/: apr_jose.c  apr_jose_decode.c  apr_jose_encode.c
json/: apr_json.c  apr_json_decode.c  apr_json_encode.c
ldap/: NWGNUmakefile  apr_ldap.dsp  apr_ldap_init.c  apr_ldap_option.c  apr_ldap_rebind.c  apr_ldap_stub.c  apr_ldap_url.c
lib/: Makefile.in  apr_cpystrn.c  apr_execve.c  apr_fnmatch.c  apr_getpass.c  apr_hash.c  apr_md5.c  apr_pools.c  apr_signal.c  apr_slack.c  apr_snprintf.c  apr_strnatcmp.c  apr_tables.c  lib.def  lib.dsp
lib_out/: apr.lib  aprapp.lib  libapr.lib
memcache/: apr_memcache.c
passwd/: Makefile.in  apr_getpass.c  apr_md5.c
redis/: apr_redis.c
shmem/: shmem.c
shmem/unix/mm/: .cvsignore  CHANGES  ChangeLog  INSTALL  LICENSE  Makefile.in  PORTING  README  THANKS  aclocal.m4  config.guess  config.sub  configure  configure.in  fbtool  ltmain.sh  mm-config.1  mm-config.in  mm-config.pod  mm.3  mm.h  mm.pod  mm_alloc.c  mm_conf.h.in  mm_core.c  mm_global.c  mm_lib.c  mm_test.c  mm_vers.c  shtool
strings/: Makefile.in  apr_cpystrn.c  apr_cstr.c  apr_fnmatch.c  apr_snprintf.c  apr_strings.c  apr_strnatcmp.c  apr_strtok.c
strmatch/: apr_strmatch.c
tables/: Makefile.in  apr_hash.c  apr_skiplist.c  apr_tables.c
test/: .cvsignore  CuTest.c  CuTest.h  MakeWin32Make.awk  MakeWin32Make.pl  Makefile.in  Makefile.win  NWGNUaprtest  NWGNUechod  NWGNUglobalmutexchild  NWGNUmakefile  NWGNUmemcachedmock  NWGNUmod_test  NWGNUproc_child  NWGNUreadchild  NWGNUsockchild  NWGNUsockperf  NWGNUtestatmc  NWGNUtryread  README  ab_apr.c  ab_apr.dsp  abc.c  abts.c  abts.h  abts_tests.h  aprtest.def  aprtest.dsp  aprtest.dsw  aprtest.h  aprtest.win  client.c  client.dsp  dbd.c  echoargs.c  echod.c  globalmutexchild.c  htdigest.c  htdigest.dsp  htpasswd.c  (+138 more)
tools/: gen_test_char.c
uri/: apr_uri.c
util-misc/: apr_date.c  apr_error.c  apr_queue.c  apr_reslist.c  apr_rmm.c  apr_thread_pool.c  apu_dso.c  apu_version.c
xlate/: xlate.c
xml/: NWGNUmakefile  apr_xml.c  apr_xml_expat.c  apr_xml_internal.h  apr_xml_libxml2.c  apr_xml_xmllite.c  expat_config.hnw
(+458 files in other folders)
